@@ -36,6 +36,8 @@
     <properties>
         <!-- TensorFlow Serving container is not available on these platforms -->
         <skipITs.s390x>true</skipITs.s390x>
+        <!-- Make use of native access during test execution only -->
+        <camel.surefire.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.surefire.fork.additional-vmargs>
     </properties>
 
     <dependencies>
